--- a/src/styles.css
+++ b/src/styles.css
@@ -478,6 +478,71 @@ form.mini input {
 }
 
 /* End Sidebar Component */
+.carousel {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: #f9f9f9;
+}
+
+.carousel button {
+  position: absolute;
+  z-index: 99;
+  width: 5rem;
+  height: 5rem;
+  color: white;
+  font-size: 3rem;
+  background-color: #999;
+  top: 50%;
+  margin: 0 1rem;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+}
+
+.carousel button.left {
+  left: 0;
+}
+
+.carousel button.right {
+  right: 0;
+}
+
+.carousel button:disabled {
+  opacity: .5;
+}
+
+.carousel__inner {
+  width: 400%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.carousel__item {
+  width: 100%;
+  height: 100%;
+  background-color: #f9f9f9;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+}
+
+.carousel__card {
+  width: 50vw;
+  background-color: white;
+  height: 25rem;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+}
+
 /* Media Queries */
 @media only screen and (min-width: 768px) {
   .card-wrapper {
