--- a/src/styles.scss
+++ b/src/styles.scss
@@ -432,6 +432,64 @@ form {
 
 
 
+.carousel {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: $color-off-light;
+
+  button {
+    position: absolute;
+    z-index: 99;
+    width: 5rem;
+    height: 5rem;
+    color: white;
+    font-size: 3rem;
+    background-color: #999;
+    top: 50%;
+    margin: 0 1rem;
+    display: grid;
+    place-content: center;
+
+    &.left {
+      left: 0;
+    }
+
+    &.right {
+      right: 0;
+    }
+
+    &:disabled {
+      opacity: .5;
+    }
+  }
+
+  &__inner {
+    width: 400%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    transition: .5s;
+  }
+
+  &__item {
+    width: 100%;
+    height: 100%;
+    background-color: $color-off-light;
+    display: grid;
+    place-content: center;
+  }
+
+  &__card {
+    width: 50vw;
+    background-color: white;
+    height: 25rem;
+    display: grid;
+    place-content: center;
+  }
+}
+
+
 /* Media Queries */
 
 @media only screen and (min-width: 768px) {
